# kristofersxyz-rs

./: .dockerignore  .env  .env.example  .gitignore  .sqllsrc.json  Cargo.toml  Dockerfile  docker-compose.yml  justfile
app/: Cargo.toml
app/src/: config.rs  lib.rs  main.rs  project.rs  router.rs
config/: base.toml  production.toml
migrations/: 0001_init.sql
src/: app.rs  lib.rs  main.rs  project.rs  router.rs  state.rs
templates/: base.html  index.html  project.html
